--- a/static/styles.css
+++ b/static/styles.css
@@ -16,37 +16,71 @@ canvas{
 	background-size: cover;
 	z-index: 1;
 }
-form{
-	/*background-color: rgba(100,100,100,.2);*/
-    color: white;
-    outline:none;
-    display:block;
+
+#main{
+    border-radius: 1%;
+    border: 10px solid;
+    border-color: #f1c232;
+    background: #ab3c3cff;
+
     position: absolute;
-    height: 30%;
-    width:10%;
-    top: 50%; margin-top:-100px;
-    left: 45%; margin-left:-400px;
-    z-index: 2;
+    height:30vw;
+    width:25vw;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+
+    z-index:2;
     margin: 0 auto;
 }
+
 input[type=text]{
-	border: 1px solid red;
-	background-color: rgba(143,44,0,.8);
-	color: white;
-	width: 100%;
-	text-align: center;
-	border-radius: 6px;
-	padding-top: 10px;
+	border: 1px solid #f1c232;
+	background-color: white;
+	color: rgb(168,168,168);
+  font-size:2vw;
+
+  position: absolute;
+  height: 3vw;
+  width: 18vw;
+  top: 18%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 input[type=button]{
-	background-color: rgba(0,135,138,.8);
-	border: 1px solid blue;
-	border-radius: 6px;
-	padding-top: 8px; 
+	border: 1px solid #f1c232;
+  border-radius: 6px;
+	background-color: black;
 	color: white;
 	text-align: center;
 	cursor: pointer;
-	margin-top: 20%;
-	width: 100%;
+  font-size:2vw;
 }
 
+#startb {
+  position: absolute;
+  height:4vw;
+  width:18vw;
+  top:42%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+
+#ctrls {
+  position: absolute;
+  height:4vw;
+  width:18vw;
+  top:60%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
+
+#credits {
+  position: absolute;
+  height:4vw;
+  width:18vw;
+  top:78%;
+  left:50%;
+  transform: translate(-50%, -50%);
+}
