--- a/static/styles.css
+++ b/static/styles.css
@@ -17,28 +17,31 @@ canvas{
 	z-index: 1;
 }
 
-#main{
-    border-radius: 1%;
-    border: 10px solid;
-    border-color: #f1c232;
-    background: #ab3c3cff;
+.c1 {
+  border-radius: 1%;
+  border: 10px solid;
+  border-color: #f1c232;
+  background: #ab3c3cff;
+}
 
-    position: absolute;
-    height:30vw;
-    width:25vw;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+#main {
+  position: absolute;
+  height:30vw;
+  width:25vw;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
 
-    z-index:2;
-    margin: 0 auto;
+  z-index:2;
+  margin: 0 auto;
 }
 
 input[type=text]{
 	border: 1px solid #f1c232;
 	background-color: white;
-	color: rgb(168,168,168);
+	color: rgb(125,125,125);
   font-size:2vw;
+  font-family: Courier New, Courier New, sans-serif;
 
   position: absolute;
   height: 3vw;
@@ -56,6 +59,7 @@ input[type=button]{
 	text-align: center;
 	cursor: pointer;
   font-size:2vw;
+  font-family: Courier New, Courier New, sans-serif;
 }
 
 #startb {
